--- a/department_pages/ece.html
+++ b/department_pages/ece.html
@@ -83,7 +83,7 @@
 
 
     <div class="container" style="padding-top: 36px;">
-        <h2 class="text-center"><strong>DEPARTMENT OF COMPUTER SCIENCE &amp; ENGINERRING</strong></h2>
+        <h2 class="text-center"><strong>DEPARTMENT OF ELECTRICAL AND COMMUNICATION &amp; ENGINERRING</strong></h2>
     </div>
 
 
