--- a/department_pages/ece.html
+++ b/department_pages/ece.html
@@ -83,7 +83,7 @@
 
 
     <div class="container" style="padding-top: 36px;">
-        <h2 class="text-center"><strong>DEPARTMENT OF COMPUTER SCIENCE &amp; ENGINERRING</strong></h2>
+        <h2 class="text-center"><strong>DEPARTMENT OF ELECTRICAL AND COMMUNICATION &amp; ENGINERRING</strong></h2>
     </div>
 
 
@@ -111,17 +111,13 @@
         <div class="container" style="padding-top: 42px;">
             <div class="text-center">
                 <h3><strong>OUR&nbsp;DEPARTMENT</strong></h3>
-                <p style="text-align: center;font-size: 26px;">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-                    eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                    ut labore et dolore magna aliqua. Felis eget velit aliquet sagittis.<br></p>
+                <p style="text-align: center;font-size: 26px;">Nullam id dolor id nibh ultricies veh<br></p>
             </div>
             <div class="row justify-content-around" style="margin-top: 72px;padding-bottom: 32px;">
                 <div class="col-lg-6 offset-lg-0" style="background: linear-gradient(rgba(255,255,255,0.81) 0%, rgba(255,255,256,0.85) 100%), url(&quot;assets/img/6-2-vision-png-image.png&quot;) center / contain no-repeat;">
                     <div>
                         <h4 class="text-center" data-aos="fade" data-aos-duration="750" data-aos-delay="200" style="font-size: 32px;border-bottom-style: solid;"><strong>VISION</strong></h4>
-                        <p class="text-center" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="200" style="font-size: 18px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Felis eget velit aliquet sagittis. Pharetra vel turpis nunc eget lorem. Ante in nibh mauris cursus mattis
-                            molestie a iaculis at. Cras pulvinar mattis nunc sed blandit libero. At elementum eu facilisis sed odio morbi quis. Cursus risus at ultrices mi. Pharetra pharetra massa massa ultricies mi quis hendrerit dolor.<br></p>
+                        <p class="text-center" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="200" style="font-size: 18px;">Lor<br></p>
                     </div>
                 </div>
                 <div class="col-lg-6" style="background: linear-gradient(rgba(255,255,255,0.85), rgba(255,255,255,0.85) 100%), url(&quot;assets/img/202-2027635_our-mission-mission-vision-icon-png.png&quot;) center / contain no-repeat;background-size: contain, contain;">
