--- a/department_pages/ece.html
+++ b/department_pages/ece.html
@@ -111,7 +111,7 @@
         <div class="container" style="padding-top: 42px;">
             <div class="text-center">
                 <h3><strong>OUR&nbsp;DEPARTMENT</strong></h3>
-                <p style="text-align: center;font-size: 26px;">Nullam id dolor id nibh ultricies veh<br></p>
+                <p style="text-align: center;font-size: 26px;">Scientists study the world as it is; engineers create the world that has never been—Theodore von Karman<br></p>
             </div>
             <div class="row justify-content-around" style="margin-top: 72px;padding-bottom: 32px;">
                 <div class="col-lg-6 offset-lg-0" style="background: linear-gradient(rgba(255,255,255,0.81) 0%, rgba(255,255,256,0.85) 100%), url(&quot;assets/img/6-2-vision-png-image.png&quot;) center / contain no-repeat;">
